# OpenMP-Quantum

./: CMakeLists.txt  Makefile  README.md  bell-offload.cpp  bell.cpp  build-lrz.sh  cirrus-compile-llvm.sh  lrz-compile-llvm.sh  omp_q.h  qaoa-offload.cpp  qasm_simulator.py  run-cirrus.sh  run-lrz.sh  run.sh  test.qasm  vqe-offload.cpp  vqe.cpp
examples/: CMakeLists.txt  Makefile  bell-offload-lrz.cpp  bell-offload.cpp  qaoa-offload.cpp  vqe-offload.cpp
include/: omp_q.h  simulate_lrz.h  simulate_qiskit.h
src/: CMakeLists.txt  Makefile  connections.c  omp_q.c  qasm_simulator.py  simulate_lrz.c  simulate_qiskit.c
